--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,121 +1,120 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+
 .container {
+  position: absolute;
   min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-}
-
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
+  /* height: 100vh; */
+  background-color: hsl(185,75%,39%);
   width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
+  overflow: hidden;
+}
+
+.bgtop {
+  position: absolute;
+  bottom: 35%;
+  right: 50%;
+}
+
+.bgbottom {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  z-index: 1;
+}
+
+.cardcontainer {
+  position: absolute;
+  background-color: #fff;
+  height: 21rem;
+  width: 21rem;
+  z-index: 2;
+  border-radius: 1rem;
+}
+
+.cardbg {
+  width: 100%;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  height: 7rem;
+}
+
+.profilephoto {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.footer a {
+.photo {
+  position: absolute;
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+}
+
+.photo img {
+  border-radius: 50%;
+  object-fit: cover;
+  border: 5px #fff solid;
+}
+
+/* font-family: 'Kumbh Sans', sans-serif; */
+
+.name {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
+  margin-top: 3.5rem;
+  color: hsl(229,23%,23%);
+  font-weight: 700;
+  font-family: 'Kumbh Sans', sans-serif;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.age {
+  color: hsl(227,10%,46%);
+  font-weight: 400;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.location h4 {
+  color: hsl(227,10%,46%);
   display: flex;
-  align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  font-weight: 400;
+  font-family: 'Kumbh Sans', sans-serif;
+  margin-top: -0.7rem;
+  font-size: 1.3ch;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
+.horizontalline {
+  height: 1px;
+  width: 100%;
+  margin-top: 2rem;
+  background-color: rgb(224, 224, 224);
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.numbers {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 4.5rem;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.category {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: hsl(229,23%,23%);
+  font-family: 'Kumbh Sans', sans-serif;
+  font-weight: 700;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.categoryname {
+  color: hsl(227,10%,46%);
+  font-family: 'Kumbh Sans', sans-serif;
+  font-weight: 400;
+  font-size: 1.1ch;
+  margin-top: 0.3rem;
 }
